prefer -Xlog:gc:stderr:time,level,tags over deprecated -XX:+PrintGCDetails
Signed-off-by: olivier lamy <oliver.lamy@gmail.com>