@@ -67,7 +67,7 @@
     <!-- enable or not TestTracker junit5 extension i.e log message when test method is starting -->
     <jetty.testtracker.log>false</jetty.testtracker.log>
 
-    <surefire.base.argLine>-Dfile.encoding=UTF-8 -Duser.language=en -Duser.region=US -showversion -Xmx1g -Xms1g -XX:+PrintGCDetails</surefire.base.argLine>
+    <surefire.base.argLine>-Dfile.encoding=UTF-8 -Duser.language=en -Duser.region=US -showversion -Xmx1g -Xms1g -Xlog:gc:stderr:time,level,tags</surefire.base.argLine>
 
     <!-- some maven plugins versions -->
     <maven.surefire.version>2.22.1</maven.surefire.version>
